--- a/content-org/main.org
+++ b/content-org/main.org
@@ -21,11 +21,59 @@
 :EXPORT_FILE_NAME: info
 :END:
 Rellenar página
-*** Vectores
+*** Arrays (arreglos)
+:PROPERTIES:
+:EXPORT_FILE_NAME: arrays
+:end:
+Los arrays son conjuntos de datos que se almacenan en memoria de manera contigua usando el mismo nombre. Se usan índices para diferenciar los distintos valores del arreglo.
+Para crear una arreglo es necesario saber la cantidad de elementos que van a componer nuestro arreglo, pues la cantidad de elementos no se puede cambiar.
+Una cosa muy importante que al principio uno suele olvidar es que los índices de los arreglos parten en 0. Es decir, un arreglo de tamaño n puede tomar índices desde el 0 hasta el n-1.
+**** Inicialización
+Hay dos formas de inicializar un array, especificando su tamaño o llenandolo con valores por defecto.
+***** Inicializar un array por su tamaño
+Para inicializar un array por su tamaño, lo único que hay que especificar es el nombre de la variable y colocar entre "[]" el tamaño de nuestro arreglo. Recordar que como los arrays parten en 0, el valor máximo que podremos acceder será el tamaño del array menos 1.
+#+begin_src cpp -n
+int arreglo[38]; // Inicializar un arreglo de ints de tamaño 38.
+#+end_src
+***** Inicializar un array con valores por defecto
+Para inicializar un array con valores por defecto, no es necesario especificar el tamaño de nuestro array, pues este está implícito en la cantidad de valores que introducimos.
+#+begin_src cpp +n
+int arreglo2[] = {3, 6, 2, 1};
+#+end_src
+**** Leer el valor de un arreglo
+Para leer un valor de nuestro arreglo, solo hay que especificar el nombre del arreglo y su índice. Notar que sólo se puede acceder a un valor de un arreglo a la vez.
+#+begin_src cpp
+arreglo2[3]; // Retorna 1
+#+end_src
+**** Asignar valores a un arreglo
+Para esto, hay que especificar la variable, el índice al cuál acceder y especificar su nuevo valor. Recordar que el valor del índice puede ser una variable, pero que no puede estar fuera del rango del tamaño de nuestro arreglo.
+#+begin_src cpp +n
+arreglo2[3] = 5; // El indice 3 de nuestro arreglo, ahora tiene el valor 3
+#+end_src
+*** Arrays multidimensionales
+:PROPERTIES:
+:EXPORT_FILE_NAME: multi-dimension-arrays
+:end:
+Un array multidimensional es aquel que requiuere de más de un índice para ser llamado, como su nombre lo indica, es útil para cuando necesitamos acceder a datos que requieren más de una dimensión, como por ejemplo valores dentro de una malla. Otra forma de enternder los arrays multidimensionales es como un arreglo de arreglos (de arreglos de arreglos.. n veces, siendo n la cantidad de dimensiones). Los arreglos de 2 dimensiones también son conocidos como matrices.
+**** Inicializar un arreglo multidimensional
+Para esto, hay que especificar el tamaño de cada dimensión del array. Notar que la regla de que empiezan en 0 y terminan en n-1 se sigue cumpliendo. Es posible asignarles valores predeterminados, pero creo que eso se va poniendo exponencialmente más psicópata a medida de que vas incrementando las dimensiones del array a crear, por lo que no lo voy a demostrar.
+#+begin_src cpp -n
+int matriz[3][4];
+int tridimensional[100][100][100];
+#+end_src
+**** Asignar valores en un arreglo multidimensional
+Es muy similar a cómo se hace en un arreglo unidimensional, solo que se especifica cada índice.
+#+begin_src cpp +n
+int n = 3, m = 5;
+matriz[2][1] = 10;
+tridimensional[n][m] = 4;
+#+end_src
+*** Vectors (vectores)
 :PROPERTIES:
 :EXPORT_FILE_NAME: vectors
 :END:
 Los vectores son como arreglos, excepto de que el tamaño es dinámico, es decir, se puede cambiar.
+**** Inicializar un vector
 Incluimos la librería:
 #+BEGIN_SRC cpp -n
 #include <vector>
@@ -70,6 +118,12 @@ Borra un dato del vector. Al igual que el insert, tiene que mover todos los dato
 #+BEGIN_SRC cpp +n
 vec.erase(vec.begin() + 2); // Elimina el valor con índice 2, en nuestro caso, el 4 que insertamos antes.
 #+END_SRC
+**** Iteradores de un arreglo
+Hay ciertos iteradores que podemos usar en un arreglo que nos ayudarán en algunos casos, como por ejemplo si quieremos recorrer un arreglo. Estos son:
+- begin() -- Iterador que accede al primer valor del arreglo.
+- end() -- Accede al final del arreglo.
+- rbegin() -- Accede al ultimo elemento del arreglo
+- rend -- Accede al inicio del arreglo
 *** Stacks (pilas)
 :PROPERTIES:
 :EXPORT_FILE_NAME: stacks
@@ -160,7 +214,7 @@ Véase: arbol binario
 :PROPERTIES:
 :EXPORT_FILE_NAME: set
 :END:
-No permite que hayan elementos repetidos.
+Es una lista que no permite que hayan elementos repetidos.
 **** Inicialización
 Incluimos la librería:
 #+BEGIN_SRC cpp -n
