meter binary search en org principal

--- a/content-org/main.org
+++ b/content-org/main.org
@@ -357,7 +357,7 @@ Si, pero es de psicópata buscar dentro de ese map.
 :PROPERTIES:
 :EXPORT_FILE_NAME: info
 :END:
-Cada algoritmo de ordenamiento tiene su forma de operar, y podría ayudar a conseguir la respuesta a un problema, no necesariamente por el resultado del ordenamiento.
+Un algoritmo de ordenamiento es aquel que toma los elementos de una estructura y les asigna un orden. Cada algoritmo de ordenamiento tiene su forma de operar, y podría ayudar a conseguir la respuesta a un problema, no necesariamente por el resultado del ordenamiento.
 ** Algoritmos de fuerza bruta
 :PROPERTIES:
 :EXPORT_HUGO_BUNDLE: ./Algoritmos de fuerza bruta
@@ -436,3 +436,183 @@ Rellenar
 - Busca el valor mínimo entre los elementos no ordenados y lo añade al final de los ordenados.
 **** Rellenar ejemplo
 **** Rellenar codigo de ejemplo
+
+* Algoritmos de búsqueda
+:PROPERTIES:
+:EXPORT_HUGO_BUNDLE: ./Algoritmos de busqueda
+:HUGO_SECTION: ./algoritmos_busqueda
+:EXPORT_HUGO_MENU: :menu
+:EXPORT_FILE_NAME: _index
+:END:
+** Búsqueda binaria
+:PROPERTIES:
+:EXPORT_HUGO_BUNDLE: ./Búsqueda binaria
+:HUGO_SECTION: ./binary_search
+:EXPORT_HUGO_MENU: :menu
+:EXPORT_FILE_NAME: _index
+:END:
+*** Acerca de
+   :PROPERTIES:
+   :EXPORT_FILE_NAME: info
+   :END:
+La búsqueda binaria es un algoritmo de /divide and conquer/ (dividir y conquistar), que nos
+permite encontrar un elemento dentro de una estructura *ordenada*
+rápidamente. Al ejecutarse, toma el centro de un arreglo y comprueba si
+el valor que se busca es igual al del centro. De no serlo, verifica si
+el valor es menor o mayor al del centro.
+
+Si el valor es mayor al del centro, se ignoran todos los valores
+anteriores al centro, dividiendo la cantidad de números a la mitad.
+
+Si el valor es menor al del centro, se ignoran todos los valores de
+después del centro, dividiendo la cantidad de números a la mitad.
+
+La complejidad de este algoritmo es *Olog(N)*, comparada con un
+algoritmo lineal, que en el peor de los casos tiene complejidad *O(N)*.
+**** Ejemplos
+*****   en la vida real
+Ir al medio de un diccionario, y buscar alfabéticamente, tomando una palabra central
+(más o menos), viendo si la palabra que queremos está antes o después y repetir el
+proceso de buscar una palabra central.
+
+***** Ejemplo computacional
+En esta imágen, se usa la búsqueda binaria para encontrar el 19.
+[[https://uniwebsidad.com/static/libros/imagenes/algoritmos-python/f0801.png]]
+
+*** Uso mediante la librería STL
+:PROPERTIES:
+:EXPORT_HUGO_BUNDLE: ./En la STL
+:HUGO_SECTION: ./stl
+:EXPORT_HUGO_MENU: :menu
+:EXPORT_FILE_NAME: _index
+:END:
+***** Importar
+:PROPERTIES:
+:EXPORT_FILE_NAME: importar
+:END:
+Podemos directamente importar toda la stl o podemos importar la librería <algorithm> de la
+siguiente forma:
+#+begin_src cpp -n
+#include <algorithm>
+#+end_src
+***** binary_search()
+:PROPERTIES:
+:EXPORT_FILE_NAME: binary_search
+:END:
+La librería STL ya incluye binary search, si queremos saber si el valor
+3 está en un vector, podemos ejecutar:
+
+#+BEGIN_SRC cpp +n
+vector<int> v{1,2,5,7};
+if (binary_search (v.begin(), v.end(), 3)) {
+    cout << "Se encuentra el valor 3 en nuestro vector\n";
+}
+else {
+    cout << "No hay ningún 3 en nuestro vector\n";
+}
+#+END_SRC
+
+Retorna un /bool/.
+
+***** lower_bound() (límite inferior)
+:PROPERTIES:
+:EXPORT_FILE_NAME: lower_bound
+:END:
+La función lower_bound() de la librería STL retorna un puntero a un
+valor *superior* o, si es posible, *igual* al entregado dentro de una
+estructura ordenada.
+
+Si todos los elementos en el arreglo son inferiores al valor pedido, se
+entrega el último elemento del arreglo. Si los elementos del arreglo son
+superiores al valor pedido, se entrega el primer elemento del arreglo.
+
+Por ejemplo:
+#+BEGIN_SRC cpp -n
+  vector<int> v{ 10, 20, 30, 30, 30, 40, 50 };
+  *lower_bound(v.begin(), v.end(), 30);
+#+END_SRC
+
+Valor de retorno: un iterador que apunta hacia *30* (el primero en el arreglo, en la posición [2])
+***** upper_bound() (límite superior)
+:PROPERTIES:
+:EXPORT_FILE_NAME: lower_bound
+:END:
+La función upper_bound() de la librería STL nos entrega un puntero a un valor
+*superior* al pedido en un arreglo ordenado.
+
+En el caso de que no haya un valor superior al pedido, nos entrega el
+último valor del arreglo.
+
+Por ejemplo:
+#+BEGIN_SRC cpp +n
+  *upper_bound(v.begin(), v.end(), 30);
+#+END_SRC
+
+Valor de retorno: iterador al *40* (posición [4])
+*** Implementaciones propias
+:PROPERTIES:
+:EXPORT_HUGO_BUNDLE: ./Implementaciones propias
+:HUGO_SECTION: ./implementaciones
+:EXPORT_HUGO_MENU: :menu
+:EXPORT_FILE_NAME: _index
+:END:
+**** Implementación con while
+   :PROPERTIES:
+   :EXPORT_FILE_NAME: con_while
+   :END:
+Esta implementación nos retorna el índice del número a buscar dentro de un arreglo.
+
+#+BEGIN_SRC cpp -n
+  int binarySearch(int arr[], int l, int r, int x)
+  {
+
+      while (l <= r) {
+          int m = l + (r - l) / 2;
+
+          // Revisa si x esta al medio
+          if (arr[m] == x)
+          return m;
+
+          // Si x es mayor, ignorar la izquierda
+          if (arr[m] < x)
+          l = m + 1;
+
+          // Si x es menor, ignorar la derecha
+          else
+          r = m - 1;
+
+      }
+      return -1;
+
+  }
+#+END_SRC
+
+**** Implementación recursiva
+   :PROPERTIES:
+   :EXPORT_FILE_NAME: con_recursion
+   :END:
+Esta implementación nos retorna el índice del número a buscar dentro de un arreglo.
+
+#+BEGIN_SRC cpp -n
+  int binarySearch(int arr[], int l, int r, int x)
+  {
+
+      if (r >= l) {
+
+          int mid = l + (r - l) / 2;
+
+          // Revisa si x esta al medio
+
+          if (arr[mid] == x)
+          return mid;
+
+          // Si x es mayor, ignorar la izquierda
+          if (arr[mid] > x)
+          return binarySearch(arr, l, mid - 1, x);
+          // Si x es mayor, ignorar la derecha
+          return binarySearch(arr, mid + 1, r, x);
+      }
+      return -1;
+  }
+#+END_SRC
+
